fix menu scroll bar z-index

--- a/source/sass/blocks/scroll.scss
+++ b/source/sass/blocks/scroll.scss
@@ -1,5 +1,6 @@
 .scroll__container {
     position: relative;
+    z-index: 0;
 }
 
 
